--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Entry</h1>
-
-<%= render 'form', entry: @entry %>
-
-<%= link_to 'Show', @entry %> |
-<%= link_to 'Back', entries_path %>
+<div class="columns is-centered mt-6">
+    <div class="column is-one-third">
+        <h1 class="is-size-2 has-text-weight-bold mb-3">Editing Entry</h1>
+        <%= render 'form', entry: @entry %>
+        <div class="edit-btn-container">
+            <%= link_to 'Show', @entry, class: "button is-info edit-show-btn" %>
+            <%= link_to 'Back', entries_path, class: "button is-danger edit-back-btn" %>
+        </div>
+    </div>
+</div>
