--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -27,3 +27,7 @@
     </div>
   <% end %>
 </div>
+
+<div class="columns is-centered mt-6">
+  <%= link_to  "View all entries", archives_index_path, class: "button is-outlined is-link is-centered" %>
+</div>
