--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Entry</h1>
-
-<%= render 'form', entry: @entry %>
-
-<%= link_to 'Back', entries_path %>
+<div class="columns is-centered mt-6">
+    <div class="column is-one-third">
+        <h1 class="is-size-2 has-text-weight-bold mb-3">New Entry</h1>
+        <%= render 'form', entry: @entry %>
+        <button class="button is-danger is-fullwidth back-btn"><%= link_to 'Back', entries_path %></button>
+    </div>
+</div>
