--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,27 +1,32 @@
-<p>
-  <strong>Meal type:</strong>
-  <%= @entry.meal_type %>
-</p>
+<% content_for :title do %>
+  <%= @entry.meal_type %> &ndash; <%= DateTime.now.to_s(:nice_date) %>
+<% end %>
+<div class="columns mt-6 is-centered">
+  <div class="column is-one-third">
+    <nav class="panel is-link">
+      <p class="panel-heading">
+        <%= @entry.meal_type %>
+      </p>
+      <div class="panel-block">
+        Calories: <%= @entry.calories %>
+      </div>
+      <div class="panel-block">
+        Proteins: <%= @entry.proteins %>
+      </div>
+      <div class="panel-block">
+        Carbohydrates: <%= @entry.carbohydrates %>
+      </div>
+      <div class="panel-block">
+        Fats: <%= @entry.fats %>
+      </div>
+    </nav>
 
-<p>
-  <strong>Calories:</strong>
-  <%= @entry.calories %>
-</p>
-
-<p>
-  <strong>Proteins:</strong>
-  <%= @entry.proteins %>
-</p>
-
-<p>
-  <strong>Carbohydrates:</strong>
-  <%= @entry.carbohydrates %>
-</p>
-
-<p>
-  <strong>Fats:</strong>
-  <%= @entry.fats %>
-</p>
-
-<%= link_to 'Edit', edit_entry_path(@entry) %> |
-<%= link_to 'Back', entries_path %>
+    <div class="columns is-mobile show-btn-container">
+      <div class="show-edit-del-btn-container">
+        <%= link_to 'Edit', edit_entry_path(@entry), class: "button is-success show-edit-btn" %>
+        <%= link_to 'Delete', entry_path(@entry), method: :delete, data: { confirm: 'Are you sure?' }, class: "button is-danger show-del-btn" %>
+      </div>
+      <%= link_to 'Back', entries_path, class: "button is-info show-back-btn" %>
+    <div>
+  </div>
+</div>
