--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
           <%= link_to root_path, calss: "navbar-item" do %>
             <span class="has-text-weight-bold is-size-4 ml-4">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 0 64 64"><circle cx="13.5" cy="11.5" r="1.5" fill="#ffffff"></circle> <path d="M60.5,1.132a1,1,0,0,0-1.364.372L49.685,18.035C49.459,18.015,49.231,18,49,18a7.964,7.964,0,0,0-3.97,1.055l3.937-14.8a1,1,0,0,0-1.934-.514l-4,15.039a7.945,7.945,0,0,0-10.509-1.405,7.992,7.992,0,0,0-13.886,1.5A7.9,7.9,0,0,0,15,18,7.989,7.989,0,0,0,7.589,29H56.411a7.975,7.975,0,0,0-4.683-10.511L60.868,2.5A1,1,0,0,0,60.5,1.132ZM26.5,24A1.5,1.5,0,1,1,28,22.5,1.5,1.5,0,0,1,26.5,24Z" fill="#ffffff" data-color="color-2"></path> <circle cx="33.5" cy="8.5" r="1.5" fill="#ffffff"></circle> <path d="M60,31H4a1,1,0,0,0-1,1A28.879,28.879,0,0,0,18.943,57.893,1.012,1.012,0,0,0,19.4,58h25.21a1.012,1.012,0,0,0,.452-.107A28.879,28.879,0,0,0,61,32,1,1,0,0,0,60,31Z" fill="#ffffff"></path></svg>
-              Food Log
+              Food Logger
             </span>
           <% end %>
           <span class="navbar-burger" data-target="navbarMenuHeroC">
