Pagination is getting error

--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -50,4 +50,6 @@
 <div class="columns is-centered mt-6 archives-index-btn-container">
   <%= link_to  "Back", root_path, class: "button is-outlined is-danger is-centered" %>
 </div>
-
+<br/>
+<%= paginate @entries %>
+<%= page_entries_info @entries %>
